<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizES</string>
    <string name="menu">Menu</string>
    <string name="menu_aulas">Aulas</string>
    <string name="menu_treinos">Treinos</string>
    <string name="menu_torneios">Torneios</string>
    <string name="menu_trofeus">Troféus</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_next">Next</string>
    <string name="title_activity_result">Results!!!</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lessons">LessonsActivity</string>
    <string name="title_activity_trains">TrainsActivity</string>
    <string name="aula1">Aula 1</string>
    <string name="title_activity_trophy">TrophyActivity</string>
    <string name="title_activity_tournament">TournamentActivity</string>

</resources>