<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/menu_background"
    tools:context="br.ufmg.dcc.rs.quizes.activities.MenuActivity" >

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="40sp" />
    
    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/menu"
        android:textSize="20sp" />

    <Button
        android:id="@+id/menu_aulas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/menu_aulas"
        android:onClick="acessarAulas" />

    <Button
        android:id="@+id/menu_treinos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_aulas"
        android:layout_marginTop="22dp"
        android:text="@string/menu_treinos"
        android:onClick="acessarTreinos" />

    <Button
        android:id="@+id/menu_torneios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_treinos"
        android:layout_marginTop="22dp"
        android:text="@string/menu_torneios"
        android:onClick="acessarTorneios" />

    <Button
        android:id="@+id/menu_trofeus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_torneios"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/menu_trofeus"
        android:onClick="acessarTrofeus" />

</RelativeLayout>